--- a/style/scss/_resume.scss
+++ b/style/scss/_resume.scss
@@ -1,6 +1,6 @@
 .resume {
   //   margin-bottom: 3.2rem;
-  padding: 16rem 1.6rem 1.6rem;
+  padding: 16rem 3.2rem 1.6rem;
 
   &-heading {
     margin-bottom: 12rem;
@@ -46,6 +46,14 @@
           }
         }
       }
+    }
+  }
+
+  .my-name {
+    border: none;
+
+    .article {
+      margin-bottom: 4rem;
     }
   }
 }
