--- a/style/scss/_base.scss
+++ b/style/scss/_base.scss
@@ -22,12 +22,15 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: $font-heading;
   color: $color-heading;
+  font-weight: 600;
 }
 
 h1 {
   font-family: $font-heading;
   font-size: 9.8rem;
+  font-weight: 700;
 }
 
 h2 {
@@ -52,10 +55,21 @@ a {
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  // max-width: 1200px;
+  // margin: 0 auto;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.center-box {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.center-nav {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
 }
