--- a/style/scss/_navbar.scss
+++ b/style/scss/_navbar.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.6rem;
+  padding: 1.6rem 3.2rem;
 
   &-left {
     display: flex;
