--- a/style/scss/_variables.scss
+++ b/style/scss/_variables.scss
@@ -1,4 +1,5 @@
-$font-heading: "Work Sans", sans-serif;
+$font-heading-hero: "Work Sans", sans-serif;
+$font-heading: "Lato", sans-serif;
 $font-text: "Poppins", sans-serif;
 
 $color-text: rgb(52, 56, 68);
