--- a/style/scss/_navbar.scss
+++ b/style/scss/_navbar.scss
@@ -11,7 +11,7 @@
 
     &:hover {
       .logo {
-        opacity: 1;
+        opacity: 0.9;
       }
     }
 
@@ -24,7 +24,9 @@
       justify-content: center;
       align-items: center;
       color: white;
-      opacity: 0.8;
+      font-size: 1.4rem;
+      font-weight: 700;
+      opacity: 0.6;
       transition: 0.2s;
     }
 
