--- a/style/scss/_projects.scss
+++ b/style/scss/_projects.scss
@@ -1,5 +1,5 @@
 .projects {
-  padding: 16rem 3.2rem 1.6rem;
+  padding: 16rem 3.2rem 12rem;
 
   &-heading {
     margin-bottom: 12rem;
@@ -15,11 +15,11 @@
       width: 40%;
 
       &-heading {
-        margin-bottom: 1.6rem;
+        margin-bottom: 2.4rem;
       }
 
       &-proper {
-        margin-bottom: 1.6rem;
+        margin-bottom: 2.4rem;
       }
 
       &-keywords {
@@ -41,6 +41,7 @@
         height: 8rem;
         border-radius: 50%;
         color: white;
+        font-weight: 500;
         opacity: 0.8;
         transition: 0.2s;
 
@@ -50,7 +51,8 @@
       }
 
       .btn-code {
-        background-color: rebeccapurple;
+        // background-color: rebeccapurple;
+        background-color: $ultramarine-blue;
       }
 
       .btn-website {
@@ -61,11 +63,11 @@
     &-image {
       width: 40%;
       overflow: hidden;
-      // border-radius: 6px;
+      border-radius: 6px;
 
       img {
+        display: block;
         width: 100%;
-        border-radius: 6px;
         transition: 0.2s;
 
         &:hover {
