--- a/style/scss/_home.scss
+++ b/style/scss/_home.scss
@@ -41,8 +41,9 @@
         transition: 0.2s;
 
         &:hover {
-          opacity: 1;
-          @include btn-animation(1.05);
+          // opacity: 1;
+          // @include btn-animation(1.05);
+          font-size: 2.2rem;
         }
       }
 
