--- a/style/scss/_footer.scss
+++ b/style/scss/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   border-top: 1px solid $color-text;
+  background-color: white;
   padding: 1.6rem;
   padding-bottom: 2.4rem;
   display: flex;
