--- a/style/scss/_contact.scss
+++ b/style/scss/_contact.scss
@@ -1,10 +1,33 @@
 .contact {
+  // position: relative;
+  width: 100%;
+  height: 100%;
   margin-bottom: auto;
+  background-color: $color-text;
   padding: 16rem 3.2rem 1.6rem;
+  display: flex;
+  flex-direction: column;
+  color: white;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    z-index: -5;
+  }
+
+  // &::after {
+  //   left: 100%;
+  // }
 
   &-heading {
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.8rem;
     text-align: center;
+    color: white;
   }
 
   &-lead {
