--- a/style/scss/_footer.scss
+++ b/style/scss/_footer.scss
@@ -1,5 +1,7 @@
 .footer {
-  border-top: 1px solid $color-text;
+  // border-top: 1px solid $color-text;
+  border-top: 1px solid #c7c7c7;
+
   background-color: white;
   padding: 1.6rem;
   padding-bottom: 2.4rem;
