--- a/style/scss/_navbar.scss
+++ b/style/scss/_navbar.scss
@@ -35,11 +35,12 @@
       line-height: 1.1;
 
       &-heading {
-        font-weight: 600;
+        font-weight: 900;
+        opacity: 0.8;
       }
 
       &-title {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
       }
     }
   }
