--- a/style/scss/_footer.scss
+++ b/style/scss/_footer.scss
@@ -16,10 +16,39 @@
     cursor: pointer;
 
     .linkedin {
-      // transition: 0.2s;
+      transition: 0.2s;
 
       &:hover {
-        @include linkedin-animation(1.3);
+        // @include linkedin-animation(1.3);
+
+        animation: in-bounce 4s infinite;
+
+        @keyframes in-bounce {
+          0% {
+            transform: scale(1);
+          }
+          10% {
+            transform: scale(1.3);
+          }
+          20% {
+            transform: scale(1.3);
+          }
+          24% {
+            transform: scale(1);
+          }
+          28% {
+            transform: scale(1.3);
+          }
+          30% {
+            transform: scale(1);
+          }
+          34% {
+            transform: scale(1.3);
+          }
+          90% {
+            transform: scale(1.3);
+          }
+        }
       }
     }
   }
