resume + navbar responsivve

--- a/style/scss/_resume.scss
+++ b/style/scss/_resume.scss
@@ -2,6 +2,17 @@
   //   margin-bottom: 3.2rem;
   padding: 16rem 3.2rem 12rem;
 
+  @media (max-width: 630px) {
+    padding: 8rem 3.2rem 8rem;
+    text-align: center;
+
+    ul {
+      text-align: left;
+      max-width: 450px;
+      margin: 0 auto;
+    }
+  }
+
   &-top {
     display: flex;
     justify-content: space-between;
@@ -32,25 +43,61 @@
     padding-top: 4rem;
 
     display: flex;
+    flex-wrap: wrap;
 
     &-heading {
       width: 42%;
+
+      @media (max-width: 1190px) {
+        width: 25%;
+      }
+
+      @media (max-width: 990px) {
+        width: 100%;
+        margin-bottom: 4.8rem;
+      }
+
+      @media (max-width: 630px) {
+        display: none;
+      }
     }
 
     &-articles {
       width: 58%;
 
+      @media (max-width: 1190px) {
+        width: 75%;
+      }
+
+      @media (max-width: 990px) {
+        width: 100%;
+      }
+
       .article {
         margin-bottom: 8rem;
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
+
+        // @media (max-width: 630px) {
+        //   width: 100%;
+        // }
 
         .timespan {
           width: 25%;
+
+          @media (max-width: 630px) {
+            width: 100%;
+            margin-bottom: 1.6rem;
+          }
         }
 
         .content {
           width: 70%;
+
+          @media (max-width: 630px) {
+            width: 100%;
+          }
 
           &-subheading {
             margin-bottom: 1.6rem;
