--- a/style/scss/_navbar.scss
+++ b/style/scss/_navbar.scss
@@ -1,14 +1,24 @@
 .navbar {
   background-color: white;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 1.6rem 3.2rem;
+
+  // @media (max-width: 630px) {
+  //   width: 100%;
+  // }
 
   &-left {
     display: flex;
     align-items: center;
     gap: 1.2rem;
+
+    @media (max-width: 630px) {
+      width: 100%;
+      margin-bottom: 4.8rem;
+    }
 
     &:hover {
       .logo {
@@ -49,6 +59,11 @@
     display: flex;
     gap: 1.2rem;
 
+    @media (max-width: 630px) {
+      // width: 100%;
+      margin: 0 auto;
+    }
+
     &-link {
       border-radius: 6px;
       padding: 1.2rem;
@@ -56,6 +71,27 @@
       font-weight: 400;
       opacity: 0.8;
       transition: 0.2s;
+
+      @media (max-width: 630px) {
+        position: relative;
+        // border: 1px solid #c7c7c7;
+        // border-radius: 50%;
+        // width: 8rem;
+        // height: 8rem;
+        // display: flex;
+
+        &::before {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          content: "";
+          width: 8rem;
+          height: 8rem;
+          border: 1px solid #c7c7c7;
+          border-radius: 50%;
+        }
+      }
 
       &:hover,
       &:focus {
