--- a/style/scss/_resume.scss
+++ b/style/scss/_resume.scss
@@ -19,6 +19,12 @@
 
     &-heading {
       margin-bottom: 12rem;
+
+      @media (max-width: 630px) {
+        margin: 0 auto;
+        margin-bottom: 2.4rem;
+        // display: none;
+      }
     }
 
     .btn-download {
