--- a/style/scss/_contact.scss
+++ b/style/scss/_contact.scss
@@ -6,10 +6,18 @@
   display: flex;
   flex-direction: column;
 
+  @media (max-width: 630px) {
+    text-align: center;
+  }
+
   &-heading {
     align-self: flex-start;
     margin-bottom: 0.8rem;
     text-align: center;
+
+    @media (max-width: 630px) {
+      width: 100%;
+    }
   }
 
   &-lead {
@@ -17,6 +25,10 @@
     margin-bottom: 9.6rem;
     text-align: center;
     font-size: 2rem;
+
+    @media (max-width: 630px) {
+      width: 100%;
+    }
   }
 
   &-content {
@@ -25,6 +37,15 @@
     justify-content: center;
     align-items: center;
     gap: 8rem;
+
+    @media (max-width: 630px) {
+      gap: 4rem;
+    }
+
+    @media (max-width: 430px) {
+      width: 220px;
+      margin: 0 auto;
+    }
 
     .phone-number,
     .email-address {
