--- a/style/scss/_navbar.scss
+++ b/style/scss/_navbar.scss
@@ -6,9 +6,9 @@
   align-items: center;
   padding: 1.6rem 3.2rem;
 
-  // @media (max-width: 630px) {
-  //   width: 100%;
-  // }
+  @media (max-width: 630px) {
+    justify-content: center;
+  }
 
   &-left {
     display: flex;
@@ -30,15 +30,20 @@
       width: 3.2rem;
       height: 3.2rem;
       border-radius: 50%;
-      background-color: rebeccapurple;
+      // background-color: rebeccapurple;
       display: flex;
       justify-content: center;
       align-items: center;
-      color: white;
+      // color: white;
       font-size: 1.4rem;
       font-weight: 700;
       opacity: 0.6;
       transition: 0.2s;
+    }
+
+    .logo-current {
+      background-color: rebeccapurple;
+      color: white;
     }
 
     .name {
@@ -57,7 +62,7 @@
 
   &-right {
     display: flex;
-    gap: 1.2rem;
+    // gap: 1.2rem;
 
     @media (max-width: 630px) {
       // width: 100%;
@@ -65,7 +70,6 @@
     }
 
     &-link {
-      border-radius: 6px;
       padding: 1.2rem;
       font-size: 1.8rem;
       font-weight: 400;
