--- a/style/scss/_projects.scss
+++ b/style/scss/_projects.scss
@@ -1,8 +1,18 @@
 .projects {
   padding: 16rem 3.2rem 12rem;
 
+  @media (max-width: 630px) {
+    padding: 8rem 3.2rem 8rem;
+    text-align: center;
+  }
+
   &-heading {
     margin-bottom: 16rem;
+
+    @media (max-width: 630px) {
+      // margin: 0 auto;
+      margin-bottom: 8rem;
+    }
   }
 
   .team-heading {
@@ -12,11 +22,35 @@
   .project {
     margin-bottom: 24rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 
+    @media (max-width: 1200px) {
+      justify-content: center;
+    }
+
+    @media (max-width: 630px) {
+      margin-bottom: 16rem;
+    }
+
     &-text {
       width: 45%;
+
+      @media (max-width: 1200px) {
+        width: 50%;
+        padding-right: 1.6rem;
+      }
+
+      @media (max-width: 990px) {
+        width: 80%;
+        margin: 0 auto;
+        margin-bottom: 4.8rem;
+      }
+
+      @media (max-width: 630px) {
+        width: 100%;
+      }
 
       &-heading {
         margin-bottom: 3.2rem;
@@ -44,6 +78,15 @@
       flex-direction: column;
       gap: 1.6rem;
 
+      @media (max-width: 990px) {
+        width: 30%;
+      }
+
+      @media (max-width: 630px) {
+        width: 100%;
+        margin-bottom: 4.8rem;
+      }
+
       .btn-project {
         display: flex;
         justify-content: center;
@@ -54,6 +97,10 @@
         color: white;
         font-weight: 500;
         opacity: 0.8;
+
+        @media (max-width: 990px) {
+          margin: 0 auto;
+        }
 
         p {
           transition: 0.2s;
@@ -84,6 +131,14 @@
       width: 35%;
       overflow: hidden;
       border-radius: 6px;
+
+      @media (max-width: 1200px) {
+        width: 40%;
+      }
+
+      @media (max-width: 630px) {
+        width: 90%;
+      }
 
       img {
         display: block;
