--- a/style/scss/_contact.scss
+++ b/style/scss/_contact.scss
@@ -44,9 +44,9 @@
     }
 
     @media (max-width: 430px) {
-      // width: 220px;
-      // margin: 0 auto;
-      gap: 10%;
+      width: 220px;
+      margin: 0 auto;
+      // gap: 10%;
     }
 
     .phone-number,
