--- a/style/scss/_contact.scss
+++ b/style/scss/_contact.scss
@@ -1,3 +1,8 @@
+// .container {
+//   @media (max-width: 630px) {
+//   }
+// }
+
 .contact {
   width: 100%;
   height: 100%;
@@ -7,6 +12,8 @@
   flex-direction: column;
 
   @media (max-width: 630px) {
+    // justify-content: center;
+    margin-bottom: 0;
     padding: 8rem 3.2rem 8rem;
     text-align: center;
   }
@@ -17,7 +24,8 @@
     text-align: center;
 
     @media (max-width: 630px) {
-      width: 100%;
+      // width: 100%;
+      display: none;
     }
   }
 
@@ -28,7 +36,8 @@
     font-size: 2rem;
 
     @media (max-width: 630px) {
-      width: 100%;
+      // width: 100%;
+      display: none;
     }
   }
 
