--- a/style/scss/_resume.scss
+++ b/style/scss/_resume.scss
@@ -21,9 +21,9 @@
       margin-bottom: 12rem;
 
       @media (max-width: 630px) {
-        margin: 0 auto;
-        margin-bottom: 2.4rem;
-        // display: none;
+        // margin: 0 auto;
+        // margin-bottom: 2.4rem;
+        display: none;
       }
     }
 
@@ -37,6 +37,10 @@
       align-items: center;
       color: white;
       opacity: 0.7;
+
+      @media (max-width: 630px) {
+        margin-left: auto;
+      }
 
       &:hover {
         opacity: 1;
@@ -123,6 +127,8 @@
     border: none;
 
     @media (max-width: 630px) {
+      padding-top: 0;
+
       .section-heading {
         display: none;
       }
