--- a/style/scss/_home.scss
+++ b/style/scss/_home.scss
@@ -86,6 +86,8 @@
       }
 
       .btn-hero {
+        box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
+
         border-radius: 50%;
         width: 16rem;
         height: 16rem;
